--- a/app/src/main/res/layout/activity_devotional.xml
+++ b/app/src/main/res/layout/activity_devotional.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/back_orange"
-    tools:context=".Dashboard">
+    tools:context=".Devotional">
 
     <RelativeLayout
         android:id="@+id/heading"
@@ -39,50 +39,32 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/heading"
         android:fontFamily="@font/secular_one"
         android:gravity="center"
-        android:padding="5dp"
-        android:text="@string/welcomeMsg"
-        android:textSize="20sp"
+        android:padding="10dp"
+        android:text="महत्वाची धार्मिक स्थळे"
         android:textColor="@color/colorSecondary"
+        android:textSize="20sp"
         android:textStyle="bold" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/imageSlider"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="6dp"
-        android:layout_below="@id/text"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
-
-        <ViewFlipper
-            android:id="@+id/slideshow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </androidx.cardview.widget.CardView>
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/imageSlider"
+        android:layout_below="@id/description"
         android:columnCount="2"
-        android:rowCount="2"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:rowCount="3">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/devotional"
+            android:id="@+id/siddheshwar"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
             android:layout_row="0"
+            android:layout_rowWeight="1"
             android:layout_column="0"
             android:layout_columnWeight="1"
             android:layout_margin="10dp"
@@ -95,80 +77,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:fontFamily="@font/secular_one"
-                android:text="महत्वाची धार्मिक \nस्थळे"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:background="@drawable/gradient_1"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/local"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_margin="10dp"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
-            app:cardElevation="6dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:background="@drawable/gradient_2"
-                android:fontFamily="@font/secular_one"
-                android:text="पर्यटन आणि स्थानिक         सेवा स्थळे"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/train"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_margin="10dp"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
-            app:cardElevation="6dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
                 android:background="@drawable/gradient_3"
                 android:fontFamily="@font/secular_one"
-                android:text="IRCTC\nरेल्वे वेळापत्रक"
+                android:gravity="center"
+                android:text="श्री सिद्धेश्वर मंदिर,\n सोलापूर"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/bus"
+            android:id="@+id/tuljapur"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_row="0"
             android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_row="1"
             android:layout_column="1"
+            android:layout_columnWeight="1"
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
@@ -179,13 +105,125 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:background="@drawable/gradient_5"
+                android:background="@drawable/gradient_1"
                 android:fontFamily="@font/secular_one"
-                android:text=" MSRTC\nबस वेळापत्रक"
+                android:gravity="center"
+                android:text="श्री तुळजाभवानी मंदिर,\n तुळजापूर"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/pandharpur"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="48dp"
+            app:cardElevation="6dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/gradient_2"
+                android:fontFamily="@font/secular_one"
+                android:gravity="center"
+                android:text="श्री विठ्ठल रुक्मिणी मंदिर,\n पंढरपूर"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/akkalkot"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="48dp"
+            app:cardElevation="6dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/gradient_5"
+                android:fontFamily="@font/secular_one"
+                android:gravity="center"
+                android:text="श्री स्वामी समर्थ मंदिर,\n अक्कलकोट"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/ganangapur"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="48dp"
+            app:cardElevation="6dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/gradient_6"
+                android:fontFamily="@font/secular_one"
+                android:gravity="center"
+                android:text="श्री दत्तात्रय मंदिर,\n गाणगापूर"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/barshi"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="48dp"
+            app:cardElevation="6dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/gradient_7"
+                android:fontFamily="@font/secular_one"
+                android:gravity="center"
+                android:text="श्री दत्तात्रय मंदिर,\n गाणगापूर"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
