--- a/app/src/main/res/layout/activity_devotional.xml
+++ b/app/src/main/res/layout/activity_devotional.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="0dp"
+        android:background="@drawable/gradient_2">
 
         <TextView
             android:layout_width="wrap_content"
@@ -22,19 +23,9 @@
             android:fontFamily="@font/secular_one"
             android:gravity="center"
             android:padding="5dp"
-            android:text="~ आ प लं   सो ला पू र ~"
+            android:text="@string/app_name1"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="24sp" />
-
-        <ImageButton
-            android:id="@+id/menu"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/menuText"
-            android:padding="15dp"
-            android:src="@drawable/ic_baseline_more_vert_24" />
+            android:textSize="20sp" />
 
     </RelativeLayout>
 
@@ -48,7 +39,7 @@
         android:padding="10dp"
         android:text="महत्वाची धार्मिक स्थळे"
         android:textColor="@color/colorSecondary"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <GridLayout
@@ -70,7 +61,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
+            app:cardCornerRadius="32dp"
             app:cardElevation="6dp">
 
             <TextView
@@ -98,7 +89,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
+            app:cardCornerRadius="32dp"
             app:cardElevation="6dp">
 
             <TextView
@@ -126,7 +117,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
+            app:cardCornerRadius="32dp"
             app:cardElevation="6dp">
 
             <TextView
@@ -154,7 +145,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
+            app:cardCornerRadius="32dp"
             app:cardElevation="6dp">
 
             <TextView
@@ -182,7 +173,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
+            app:cardCornerRadius="32dp"
             app:cardElevation="6dp">
 
             <TextView
@@ -210,7 +201,7 @@
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="48dp"
+            app:cardCornerRadius="32dp"
             app:cardElevation="6dp">
 
             <TextView
@@ -220,7 +211,7 @@
                 android:background="@drawable/gradient_7"
                 android:fontFamily="@font/secular_one"
                 android:gravity="center"
-                android:text="श्री दत्तात्रय मंदिर,\n गाणगापूर"
+                android:text="श्री भागवत मंदिर,\n बार्शी"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
