--- a/app/src/main/res/layout/activity_tourism.xml
+++ b/app/src/main/res/layout/activity_tourism.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/back_orange"
-    tools:context=".Dashboard">
+    tools:context=".Tourism">
 
     <RelativeLayout
         android:id="@+id/heading"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="0dp"
+        android:background="@drawable/gradient_2">
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,59 +26,31 @@
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/menu"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/menuText"
-            android:padding="15dp"
-            android:src="@drawable/ic_baseline_more_vert_24" />
-
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/heading"
         android:fontFamily="@font/secular_one"
         android:gravity="center"
-        android:padding="5dp"
-        android:text="@string/welcomeMsg"
-        android:textSize="18sp"
+        android:padding="10dp"
+        android:text="पर्यटन आणि स्थानिक सेवा स्थळे"
         android:textColor="@color/colorSecondary"
+        android:textSize="18sp"
         android:textStyle="bold" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/imageSlider"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="6dp"
-        android:layout_below="@id/text"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
-
-        <ViewFlipper
-            android:id="@+id/slideshow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </androidx.cardview.widget.CardView>
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/imageSlider"
+        android:layout_below="@id/description"
         android:columnCount="2"
-        android:rowCount="3"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:rowCount="3">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/history"
+            android:id="@+id/siddheshwar"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
@@ -98,7 +70,7 @@
                 android:background="@drawable/gradient_6"
                 android:fontFamily="@font/secular_one"
                 android:gravity="center"
-                android:text="सोलापूरचा\nइतिहास"
+                android:text="पर्यटन आणि \nमनोरंजन"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -106,11 +78,11 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/devotional"
+            android:id="@+id/tuljapur"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
             android:layout_row="0"
+            android:layout_rowWeight="1"
             android:layout_column="1"
             android:layout_columnWeight="1"
             android:layout_margin="10dp"
@@ -123,24 +95,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:background="@drawable/gradient_7"
                 android:fontFamily="@font/secular_one"
-                android:text="धार्मिक स्थळे"
+                android:gravity="center"
+                android:text="हॉस्पिटल आणि \nदवाखाने"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:background="@drawable/gradient_1"/>
+                android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/local"
+            android:id="@+id/pandharpur"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
             android:layout_row="1"
+            android:layout_rowWeight="1"
             android:layout_column="0"
+            android:layout_columnWeight="1"
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
@@ -151,24 +123,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:background="@drawable/gradient_2"
+                android:background="@drawable/gradient_1"
                 android:fontFamily="@font/secular_one"
-                android:text="पर्यटन आणि स्थानिक         सेवा स्थळे"
+                android:gravity="center"
+                android:text="शाळा आणि\nमहाविद्यालये"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/train"
+            android:id="@+id/akkalkot"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
             android:layout_row="1"
+            android:layout_rowWeight="1"
             android:layout_column="1"
+            android:layout_columnWeight="1"
             android:layout_margin="10dp"
             android:clickable="true"
             android:foreground="?android:attr/selectableItemBackground"
@@ -179,10 +151,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:background="@drawable/gradient_3"
                 android:fontFamily="@font/secular_one"
-                android:text="IRCTC\nरेल्वे वेळापत्रक"
+                android:gravity="center"
+                android:text="हॉटेल आणि\nलॉज"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -190,12 +162,40 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/bus"
+            android:id="@+id/ganangapur"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="2"
             android:layout_rowWeight="1"
             android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_margin="10dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="32dp"
+            app:cardElevation="6dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/gradient_2"
+                android:fontFamily="@font/secular_one"
+                android:gravity="center"
+                android:text="फूड आणि\nरेस्टॉरंट्स"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/barshi"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_row="2"
+            android:layout_rowWeight="1"
+            android:layout_column="1"
             android:layout_columnWeight="1"
             android:layout_margin="10dp"
             android:clickable="true"
@@ -210,38 +210,10 @@
                 android:background="@drawable/gradient_5"
                 android:fontFamily="@font/secular_one"
                 android:gravity="center"
-                android:text=" MSRTC\nबस वेळापत्रक"
+                android:text="महत्वाची\nकार्यालये"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/emergency"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_margin="10dp"
-            android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="32dp"
-            app:cardElevation="6dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:background="@drawable/gradient_7"
-                android:fontFamily="@font/secular_one"
-                android:text="अत्यावश्यक \nसेवा"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
 
         </androidx.cardview.widget.CardView>
 
